trying to fix horizontal scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ body{
   font-size: var(--normal-font-size);
   background-color: var(--body-color);
   color: var(--text-color);
-  overflow-x: hidden;
+  overflow-x: hidden!important;
 }
 
 h1,h2,h3,h4{
